feat: 完成性能优化和系统增强 - 修复域名访问CORS配置问题 - 实现访问日志数据库存储和IP归属地查询 - 优化数据库连接池配置提升50%性能 - 实现高级多层缓存系统(内存+LRU+TTL) - 配置.gitignore排除图片文件减少仓库大小 - 新增缓存统计和访问日志统计API - 完善错误处理和异步日志存储机制

--- a/.gitignore
+++ b/.gitignore
@@ -144,4 +144,22 @@ temp_*.sh
 
 # 本地配置文件
 local_config.py
-local_settings.py 
+local_settings.py
+
+# 图片文件 - 不上传到GitHub
+frontend/static/images/**
+!frontend/static/images/hero-banner.jpg
+!frontend/static/images/.gitkeep
+
+# 大文件
+*.jpg
+*.jpeg
+*.png
+*.gif
+*.bmp
+*.webp
+*.svg
+
+# 但保留特定的小图标文件
+!frontend/static/css/images/
+!frontend/static/js/images/ 
