--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,27 @@
+# 南意秋棠项目环境变量配置示例
+# 请将此文件复制为 .env 并填入真实的配置信息
+
+# 阿里云OSS配置
+OSS_ACCESS_KEY_ID=
+OSS_ACCESS_KEY_SECRET=
+OSS_ENDPOINT=https://oss-cn-hangzhou.aliyuncs.com
+OSS_BUCKET_NAME=nanyiqiutang
+IMAGE_SOURCE=local
+
 # 数据库配置
-DB_HOST=your_db_host
+DB_HOST=47.118.250.53
 DB_PORT=3306
-DB_NAME=your_db_name
-DB_USER=your_db_user
-DB_PASSWORD=your_db_password
+DB_USER=nanyi
+DB_PASSWORD=
+DB_NAME=nanyiqiutang
 
 # 应用配置
 FLASK_ENV=development
-FLASK_DEBUG=True
-SECRET_KEY=your_secret_key
-
-# 服务端口
+FLASK_DEBUG=true
+SECRET_KEY=your_secret_key_here
 BACKEND_PORT=5001
 FRONTEND_PORT=8500
-
-# 域名配置
-DOMAIN=your_domain
-BACKEND_URL=http://your_domain:5001
-FRONTEND_URL=http://your_domain:8500
+DOMAIN=chenxiaoshivivid.com.cn
 
 # CORS配置
-CORS_ORIGINS=http://your_domain:8500,http://localhost:8500
+CORS_ORIGINS=http://localhost:8500,http://121.36.205.70:8500,http://chenxiaoshivivid.com.cn:8500
