--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,25 @@
-# 南意秋棠项目环境变量配置示例
-# 请将此文件复制为 .env 并填入真实的配置信息
+# 环境变量配置示例
+# 复制此文件为 .env 并填入实际值
 
 # 阿里云OSS配置
-OSS_ACCESS_KEY_ID=
-OSS_ACCESS_KEY_SECRET=
+OSS_ACCESS_KEY_ID=your_access_key_id_here  
+OSS_ACCESS_KEY_SECRET=your_access_key_secret_here
 OSS_ENDPOINT=https://oss-cn-hangzhou.aliyuncs.com
-OSS_BUCKET_NAME=nanyiqiutang
-IMAGE_SOURCE=local
+OSS_BUCKET_NAME=your_bucket_name
+OSS_CDN_DOMAIN=your_cdn_domain_optional
 
 # 数据库配置
-DB_HOST=47.118.250.53
-DB_PORT=3306
-DB_USER=nanyi
-DB_PASSWORD=
-DB_NAME=nanyiqiutang
+DATABASE_URL=sqlite:///nanyi.db
 
 # 应用配置
-FLASK_ENV=development
-FLASK_DEBUG=true
 SECRET_KEY=your_secret_key_here
-BACKEND_PORT=5001
-FRONTEND_PORT=8500
-DOMAIN=chenxiaoshivivid.com.cn
+DEBUG=false
+PORT=5000
 
-# CORS配置
-CORS_ORIGINS=http://localhost:8500,http://121.36.205.70:8500,http://chenxiaoshivivid.com.cn:8500
+# 缓存配置
+CACHE_TYPE=simple
+CACHE_DEFAULT_TIMEOUT=300
+
+# 日志配置
+LOG_LEVEL=INFO
+LOG_FILE=logs/app.log
