--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,29 @@
-# 环境变量配置示例
-# 复制此文件为 .env 并填入实际值
+# 数据库配置
+DB_HOST=your_db_host
+DB_PORT=3306
+DB_NAME=your_db_name
+DB_USER=your_db_user
+DB_PASSWORD=your_db_password
 
-# 阿里云OSS配置
-OSS_ACCESS_KEY_ID=your_access_key_id_here  
-OSS_ACCESS_KEY_SECRET=your_access_key_secret_here
+# 阿里云OSS配置（如使用OSS存储）
+OSS_ACCESS_KEY_ID=your_real_access_key_id
+OSS_ACCESS_KEY_SECRET=your_real_access_key_secret
 OSS_ENDPOINT=https://oss-cn-hangzhou.aliyuncs.com
 OSS_BUCKET_NAME=your_bucket_name
-OSS_CDN_DOMAIN=your_cdn_domain_optional
-
-# 数据库配置
-DATABASE_URL=sqlite:///nanyi.db
 
 # 应用配置
-SECRET_KEY=your_secret_key_here
-DEBUG=false
-PORT=5000
+FLASK_ENV=development
+FLASK_DEBUG=True
+SECRET_KEY=your_secret_key
 
-# 缓存配置
-CACHE_TYPE=simple
-CACHE_DEFAULT_TIMEOUT=300
+# 服务端口
+BACKEND_PORT=5001
+FRONTEND_PORT=8500
 
-# 日志配置
-LOG_LEVEL=INFO
-LOG_FILE=logs/app.log
+# 域名配置
+DOMAIN=your_domain
+BACKEND_URL=http://your_domain:5001
+FRONTEND_URL=http://your_domain:8500
+
+# CORS配置
+CORS_ORIGINS=http://your_domain:8500,http://localhost:8500
