--- a/nginx/products-sites.conf
+++ b/nginx/products-sites.conf
@@ -65,11 +65,18 @@ server {
         proxy_read_timeout 30s;
     }
     
-    # 静态文件缓存
-    location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg)$ {
+    # 静态文件缓存 - 分别处理不同类型文件
+    location ~* \.(css|js)$ {
         proxy_pass http://frontend_servers;
         proxy_set_header Host $host;
-        expires 1d;
+        expires 1h;  # CSS和JS文件缓存1小时
+        add_header Cache-Control "public, must-revalidate";
+    }
+    
+    location ~* \.(jpg|jpeg|png|gif|ico|svg)$ {
+        proxy_pass http://frontend_servers;
+        proxy_set_header Host $host;
+        expires 30d;  # 图片文件缓存1天
         add_header Cache-Control "public, immutable";
     }
     
@@ -136,11 +143,18 @@ server {
         proxy_read_timeout 30s;
     }
     
-    # 静态文件缓存
-    location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg)$ {
+    # 静态文件缓存 - 分别处理不同类型文件
+    location ~* \.(css|js)$ {
         proxy_pass http://frontend_servers;
         proxy_set_header Host $host;
-        expires 1d;
+        expires 1h;  # CSS和JS文件缓存1小时
+        add_header Cache-Control "public, must-revalidate";
+    }
+    
+    location ~* \.(jpg|jpeg|png|gif|ico|svg)$ {
+        proxy_pass http://frontend_servers;
+        proxy_set_header Host $host;
+        expires 30d;  # 图片文件缓存1天
         add_header Cache-Control "public, immutable";
     }
     
