--- a/.gitignore
+++ b/.gitignore
@@ -162,4 +162,97 @@ frontend/static/images/**
 
 # 但保留特定的小图标文件
 !frontend/static/css/images/
-!frontend/static/js/images/ 
+!frontend/static/js/images/
+
+# Python虚拟环境
+products_env/
+venv/
+env/
+ENV/
+
+# Python字节码和缓存
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+
+# 分发/打包
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# 环境变量文件
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# 日志文件
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# 临时文件
+*.tmp
+*.temp
+*~
+.DS_Store
+Thumbs.db
+
+# IDE配置
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# 数据库文件
+*.sqlite3
+*.db
+
+# 缓存
+.cache/
+.pytest_cache/
+
+# 覆盖率报告
+htmlcov/
+.coverage
+.coverage.*
+coverage.xml
+*.cover
+.hypothesis/
+
+# MyPy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Node.js依赖
+node_modules/
+
+# 备份文件
+*.bak
+*.backup
+
+# 系统文件
+.Trash-*
+ehthumbs.db 
